# GPTtrade

./: .env.example  .gitignore  README.md  claude.md  config.yaml  pyproject.toml
src/: main.py  scheduler.py
src/agent/: engine_loader.py  llm_clients.py  policy.py  tradingagents_engine.py
src/data/: calendar_data.py  market_data.py  news_data.py
src/execution/: alpaca_broker.py  broker_interface.py  simulator_broker.py
src/features/: behavioral_features.py  sentiment.py
src/observability/: logging.py  notify.py  web.py
src/risk/: position_sizing.py  risk_gate.py
src/storage/: db.py  models.py
tests/: conftest.py  test_calendar.py  test_integration.py  test_llm_clients.py  test_llm_policy.py  test_no_prompting.py  test_notify.py  test_offline.py  test_position_sizing.py  test_risk_gate.py  test_scheduler_autonomy.py  test_sentiment.py  test_tradingagents_engine.py  test_web.py
tools/: audit.py  inspect_tradingagents.py  smoke.py
